<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".task_1.FragmentC">


    <TextView
        android:id="@+id/text_view_massage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_from_fragment_b"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:layout_gravity="top|center"/>

    <Button
        android:id="@+id/to_A_frag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_margin="16dp"
        android:text="@string/back_to_a"/>

    <Button
        android:id="@+id/to_D_frag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        android:layout_margin="16dp"
        android:text="@string/to_fragment_d"/>

</FrameLayout>